--- a/slider+textLink/style.scss
+++ b/slider+textLink/style.scss
@@ -1,3 +1,5 @@
+@import './slider/slider';
+
 * {
   box-sizing: border-box;
 }
@@ -8,55 +10,14 @@ body {
 
 .wrapper {
   overflow: hidden;
+  padding-top: 30px;
   max-width: 100vw;
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   background: url("img/y-so-serious-white.png");
   font-family: Arial;
   font-size: 20px;
 }
 
-.container {
-  display: flex;
-  .links {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    li {
-      color: #fff;
-      padding: 10px 15px;
-      min-width: 300px;
-      background: #8836BF;
-      border-bottom: 1px solid #A993BF;
-      cursor: pointer;
-      &:hover, &.active {
-        background: #5B2A8C;
-      }
-      &:last-child {
-        border-bottom: none;
-      }
-    }
-  }
 
-  .slider-holder {
-    padding: 0 10px;
-    background: #fff;
-    .slide {
-      width: 400px;
-      height: 400px;
-      overflow: hidden;
-      display: none;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: top;
-      }
-      &.active {
-        display: block;
-      }
-    }
-  }
-}
