--- a/slider+textLink/style.scss
+++ b/slider+textLink/style.scss
@@ -10,11 +10,11 @@ body {
 
 .wrapper {
   overflow: hidden;
-  padding-top: 30px;
   max-width: 100vw;
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
   background: url("img/y-so-serious-white.png");
   font-family: Arial;
   font-size: 20px;
