--- a/slider+textLink/slider/slider.scss
+++ b/slider+textLink/slider/slider.scss
@@ -1,6 +1,7 @@
 .slider {
   &__container {
     display: flex;
+    align-items: center;
   }
 
   &__links {
@@ -31,7 +32,7 @@
 
   &__item {
     width: 320px;
-    height: 300px;
+    height: 400px;
     overflow: hidden;
     display: none;
     padding: 0 10px;
@@ -41,7 +42,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: top;
+      object-position: center;
     }
 
     &.active {
